ugh render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: neveroff
     env: python
     plan: free
-    repo: https://github.com/<YOUR_GH_USERNAME>/<YOUR_REPO>
+    repo: https://github.com/X5-6/Z/
     branch: main
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
@@ -15,8 +15,6 @@ services:
         value: "10000"
       - key: LOG_LEVEL
         value: "INFO"
-      # token and other sensitive values should be added in the Render dashboard (Secrets)
-      # Example: add token via "Environment" in Render UI, not in this file.
 disks:
   - name: neveroff-data
     sizeGB: 1
